  initialization by a SandboxManagerFilter.

Bug Handling
------------

* Fixed visibility of synchronous decoders in reports (#1312).

* More ProcessInput/ProcessDirectoryInput retry logic fixes (#1412 & #1418).

* ProcessInput fixed to no longer leak decoder goroutines when reconfigured
  via ProcessDirectoryInput-driven config changes (#1444).

0.9.2 (2015-??-??)
==================


0.9.1 (2015-03-13)
==================

Features
--------

* Added configurable max_message_size to heka-cat.

* Added `count` setting to TokenSplitter to allow splitting on every Nth
  instance of the given delimiter.

* Added `deliver_incomplete_final` setting to SplitterRunner.

* Added `max_message_size` setting to UdpOutput.

Bug Handling
------------

* Fix the message matcher parser to clear the yySymType structure on each call
  (#1409).

* Protect read_message("raw") from reading an empty pack.MsgBytes (#1405).

* Moved `SetSplitterRunner` out of the config's MakeRunner and into the
  `NewSplitterRunner` function to make sure a splitter always has access to a
  SplitterRunner if needed.

* Fixed SplitterRunner buffer readPos so it only increments when a read call
  doesn't return an error (#1367).

* Ensured plugin list file is closed after writing to it in Dashboard plugin.

* Fixed exiting / restart behavior for ProcessInput to match documentation
  (#1395).

* UdpOutput drops message if its size exceeds allowed UDP data size (#1393).

0.9.0 (2015-02-25)
==================

Backwards Incompatibilities
---------------------------

* Major overhaul of Heka's configuration loading code. This doesn't impact
  most plugins, it's only a breaking change for plugins that happen to
  instantiate and manage the lifecycles of other embedded plugins, e.g.
  MultiDecoder, ProcessDirectoryInput, SandboxManagerFilter.

* All inputs now support `decoder`, `synchronous_decode`, and
  `send_decode_failures` config options, automatically extracted by Heka's
  config system.
