@@ -47,6 +47,9 @@ Bug Handling
 * ProcessInput fixed to no longer leak decoder goroutines when reconfigured
   via ProcessDirectoryInput-driven config changes (#1444).
 
+* Check configuration, ticker_interval in Stat Accumulator Input  must be
+  greater than 0 (#1474).
+
 0.9.2 (2015-??-??)
 ==================
 
